<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_app"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <LinearLayout
        android:id="@+id/create_modpack_profile_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card"
        android:orientation="vertical"
        android:paddingVertical="@dimen/padding_large"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_browse_modrinth_modpacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/padding_large"
            android:text="@string/modpack_browse_modrinth"
            android:textSize="@dimen/_12ssp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_browse_curseforge_modpacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/padding_large"
            android:text="@string/modpack_browse_curseforge"
            android:textSize="@dimen/_12ssp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_browse_modpacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/padding_large"
            android:text="@string/modpack_browse_all"
            android:textSize="@dimen/_12ssp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_import_modpack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:text="@string/modpack_import_file"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
